add missing install

--- a/cob_model_identifier/CMakeLists.txt
+++ b/cob_model_identifier/CMakeLists.txt
@@ -28,6 +28,9 @@ install(TARGETS output_recorder_node
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+install(TARGETS output_recorder
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
 
 install(PROGRAMS scripts/input_series_twist.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/scripts
