[CATKIN LINT] clean up CMakeLists.txt
Fix all but one issues causing catkin_lint to fail.

Remaining warning is:
- cob_obstacle_distance: CMakeLists.txt(4): warning: variable
  CMAKE_CXX_FLAGS is modified

--- a/cob_collision_velocity_filter/CMakeLists.txt
+++ b/cob_collision_velocity_filter/CMakeLists.txt
@@ -14,7 +14,12 @@ endif()
 ### Dynamic reconfigure ###
 generate_dynamic_reconfigure_options(cfg/CollisionVelocityFilter.cfg)
 
-catkin_package()
+catkin_package(
+  CATKIN_DEPENDS
+    geometry_msgs
+    nav_msgs
+    visualization_msgs
+)
 
 ### BUILD ###
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
